Added integration tests